--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,8 +16,8 @@
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 
 <div class="mainContainerBox">
-  <header class="nav">
-    <nav>
+  <header>
+    <nav class="nav>">
       <a href="services.html">Services</a>
       <a href="#">Product</a>
       <a href="#">Vision</a>
@@ -50,7 +52,7 @@
       Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
       </div>
     </div>
-    
+    <br><br>
     <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
     
     <div class="bottom">
