--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 
 <div class="mainContainerBox">
-  <header>
-    <nav class="nav>">
-      <a href="services.html">Services</a>
-      <a href="#">Product</a>
-      <a href="#">Vision</a>
-      <a href="#">Features</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-      </nav>
+  <header class="nav>">
+    <nav>
+        <a href="services.html">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <div></div>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+        
+    </nav>
   </header>
 
     <div class="headerBox">
