finished media queiries

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 
 <div class="mainContainerBox">
-  <header class="nav>">
+  <header>
     <nav>
         <a href="services.html">Services</a>
         <a href="#">Product</a>
@@ -24,10 +24,8 @@
         <a href="#">Features</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
-        <div></div>
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-        
     </nav>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">   
   </header>
 
     <div class="headerBox">
@@ -54,7 +52,7 @@
       Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
       </div>
     </div>
-    <br><br>
+    <br>
     <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
     
     <div class="bottom">
@@ -71,7 +69,7 @@
           Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
       </div>
     </div>
-    <br><br>
+    <br>
     <hr>
     <div class="contact">
       <footer>
